--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.3",
     "platform.js": "platform#^1.3.3"
+  },
+  "dependencies": {
+    "ion-gallery": "^0.1.14"
   }
 }
